testsuite/tests/rename/should_fail/T18021.stderr

T18021.hs:12:3: error:
    The RHS of an associated type declaration mentions out-of-scope variable ‘a’
      All such variables must be bound on the LHS

T18021.hs:17:3: error:
    The RHS of an associated type declaration mentions out-of-scope variable ‘a’
      All such variables must be bound on the LHS
